--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -21,15 +21,12 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-D:\µã¼ìÒÇÈí¼þ\rt1052.uvprojx
+D:\Project_v0.04\rt1052.uvprojx
 Project File Date:  01/02/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling main.c...
-linking...
-Program Size: Code=83832 RO-data=7336 RW-data=321296 ZI-data=28140  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -113,15 +110,15 @@ Package Vendor: NXP
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
       Include file:  fsl_device_registers.h
-      Source file:   system_MIMXRT1052.c
-      Source file:   arm\startup_MIMXRT1052.s
-      Include file:  MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
       Include file:  system_MIMXRT1052.h
+      Source file:   arm\startup_MIMXRT1052.s
+      Source file:   system_MIMXRT1052.c
+      Include file:  MIMXRT1052.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
-      Include file:  utilities\fsl_shell.h
       Source file:   utilities\fsl_shell.c
+      Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
       Include file:  components\serial_manager\serial_port_uart.h
@@ -133,26 +130,26 @@ Package Vendor: NXP
       Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
-      Include file:  utilities\fsl_notifier.h
       Source file:   utilities\fsl_notifier.c
+      Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Source file:   utilities\debug_console\fsl_debug_console.c
-      Source file:   utilities\str\fsl_str.c
-      Include file:  utilities\str\fsl_str.h
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Include file:  utilities\str\fsl_str.h
+      Source file:   utilities\str\fsl_str.c
+      Source file:   utilities\debug_console\fsl_debug_console.c
       Include file:  utilities\debug_console\fsl_debug_console.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Include file:  drivers\fsl_xbara.h
       Source file:   drivers\fsl_xbara.c
+      Include file:  drivers\fsl_xbara.h
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
-      Source file:   drivers\fsl_src.c
       Include file:  drivers\fsl_src.h
+      Source file:   drivers\fsl_src.c
 
    * Component: NXP::Device:SDK Drivers:snvs_lp:2.1.0
       Include file:  drivers\fsl_snvs_lp.h
@@ -163,8 +160,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_snvs_hp.h
 
    * Component: NXP::Device:SDK Drivers:sdhc:2.2.8
-      Include file:  drivers\fsl_usdhc.h
       Source file:   drivers\fsl_usdhc.c
+      Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
       Source file:   drivers\fsl_qtmr.c
@@ -191,23 +188,23 @@ Package Vendor: NXP
       Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Source file:   components\lists\generic_list.c
       Include file:  components\lists\generic_list.h
+      Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Include file:  drivers\fsl_lpi2c.h
       Source file:   drivers\fsl_lpi2c.c
+      Include file:  drivers\fsl_lpi2c.h
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
       Source file:   drivers\fsl_gpt.c
       Include file:  drivers\fsl_gpt.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
-      Source file:   drivers\fsl_gpio.c
       Include file:  drivers\fsl_gpio.h
+      Source file:   drivers\fsl_gpio.c
 
    * Component: NXP::Device:SDK Drivers:flexspi:2.1.1
       Source file:   drivers\fsl_flexspi.c
@@ -218,8 +215,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Source file:   drivers\fsl_dmamux.c
       Include file:  drivers\fsl_dmamux.h
+      Source file:   drivers\fsl_dmamux.c
 
    * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
       Source file:   drivers\fsl_dcdc.c
@@ -230,8 +227,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Include file:  drivers\fsl_clock.h
       Source file:   drivers\fsl_clock.c
+      Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
       Include file:  drivers\fsl_adc_etc.h
@@ -257,29 +254,29 @@ Package Vendor: NXP
       Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Source file:   Source\stream_buffer.c
       Include file:  Source\include\message_buffer.h
+      Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Include file:  Source\include\event_groups.h
       Source file:   Source\event_groups.c
+      Include file:  Source\include\event_groups.h
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
       Include file:  Source\include\croutine.h
       Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\FreeRTOS.h
-      Source file:   Source\tasks.c
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
-      Include file:  Source\include\queue.h
-      Include file:  Source\include\semphr.h
-      Include file:  Source\include\task.h
-      Source file:   Source\list.c
       Source file:   Source\queue.c
+      Include file:  Source\include\task.h
+      Include file:  Source\include\queue.h
+      Source file:   Source\tasks.c
+      Include file:  Source\include\semphr.h
+      Source file:   Source\list.c
+      Include file:  Source\include\FreeRTOS.h
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Config:CMSIS RTOS2:10.2.0
@@ -287,7 +284,7 @@ Package Vendor: NXP
 
    * Component: ::CMSIS:RTOS2:2.1.3 (API)
       Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
