--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\project\rt1052.uvprojx
-Project File Date:  01/14/2020
+Project File Date:  01/15/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling adc_app.c...
+compiling adc_drv.c...
 linking...
-Program Size: Code=88980 RO-data=7272 RW-data=1248 ZI-data=5426356  
+Program Size: Code=91088 RO-data=7332 RW-data=1248 ZI-data=5426356  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -72,6 +72,7 @@ Package Vendor: NXP
    * Component: snvs_hp Version: 2.1.2
    * Component: sdhc Version: 2.2.8
    * Component: qtmr Version: 2.0.0
+   * Component: pwm Version: 2.0.0
    * Component: pit Version: 2.0.2
    * Component: lpuart_edma Version: 2.2.7
    * Component: lpuart_adapter Version: 1.0.0
@@ -112,12 +113,12 @@ Package Vendor: NXP
 <h2>Collection of Component Files used:</h2>
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Source file:   arm\startup_MIMXRT1052.s
-      Include file:  MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
       Include file:  system_MIMXRT1052.h
-      Include file:  fsl_device_registers.h
       Source file:   system_MIMXRT1052.c
+      Include file:  MIMXRT1052.h
+      Source file:   arm\startup_MIMXRT1052.s
+      Include file:  fsl_device_registers.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Include file:  utilities\fsl_shell.h
@@ -128,27 +129,27 @@ Package Vendor: NXP
       Source file:   components\serial_manager\serial_port_uart.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
+      Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_manager.h
       Include file:  components\serial_manager\serial_port_internal.h
-      Source file:   components\serial_manager\serial_manager.c
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Include file:  utilities\str\fsl_str.h
-      Include file:  utilities\debug_console\fsl_debug_console.h
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\str\fsl_str.h
       Source file:   utilities\debug_console\fsl_debug_console.c
+      Include file:  utilities\debug_console\fsl_debug_console.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Source file:   drivers\fsl_xbara.c
       Include file:  drivers\fsl_xbara.h
+      Source file:   drivers\fsl_xbara.c
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
       Source file:   drivers\fsl_src.c
@@ -167,20 +168,24 @@ Package Vendor: NXP
       Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
+      Source file:   drivers\fsl_qtmr.c
+
+   * Component: NXP::Device:SDK Drivers:pwm:2.0.0
+      Source file:   drivers\fsl_pwm.c
+      Include file:  drivers\fsl_pwm.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Include file:  drivers\fsl_pit.h
       Source file:   drivers\fsl_pit.c
+      Include file:  drivers\fsl_pit.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
       Source file:   drivers\fsl_lpuart_edma.c
       Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
-      Include file:  components\uart\uart.h
       Source file:   components\uart\lpuart_adapter.c
+      Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
       Source file:   drivers\fsl_lpuart.c
@@ -191,8 +196,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Include file:  components\lists\generic_list.h
       Source file:   components\lists\generic_list.c
+      Include file:  components\lists\generic_list.h
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
@@ -214,12 +219,12 @@ Package Vendor: NXP
       Include file:  drivers\fsl_flexspi.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Source file:   drivers\fsl_edma.c
       Include file:  drivers\fsl_edma.h
+      Source file:   drivers\fsl_edma.c
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Source file:   drivers\fsl_dmamux.c
       Include file:  drivers\fsl_dmamux.h
+      Source file:   drivers\fsl_dmamux.c
 
    * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
       Source file:   drivers\fsl_dcdc.c
@@ -230,21 +235,21 @@ Package Vendor: NXP
       Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Include file:  drivers\fsl_clock.h
       Source file:   drivers\fsl_clock.c
+      Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
       Include file:  drivers\fsl_adc_etc.h
       Source file:   drivers\fsl_adc_etc.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
-      Include file:  drivers\fsl_adc.h
       Source file:   drivers\fsl_adc.c
+      Include file:  drivers\fsl_adc.h
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
@@ -264,22 +269,22 @@ Package Vendor: NXP
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Source file:   Source\event_groups.c
       Include file:  Source\include\event_groups.h
+      Source file:   Source\event_groups.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\FreeRTOS.h
-      Source file:   Source\list.c
+      Include file:  Source\include\semphr.h
       Include file:  Source\include\task.h
+      Include file:  Source\include\queue.h
+      Source file:   Source\list.c
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
+      Include file:  Source\include\FreeRTOS.h
       Source file:   Source\tasks.c
       Source file:   Source\queue.c
-      Include file:  Source\include\queue.h
-      Include file:  Source\include\semphr.h
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Config:CMSIS RTOS2:10.2.0
@@ -287,7 +292,7 @@ Package Vendor: NXP
 
    * Component: ::CMSIS:RTOS2:2.1.3 (API)
       Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
