--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  01/15/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling adc_drv.c...
+compiling adc_app.c...
 linking...
-Program Size: Code=91088 RO-data=7332 RW-data=1248 ZI-data=5426356  
+Program Size: Code=89324 RO-data=7272 RW-data=1248 ZI-data=5426356  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -292,7 +292,7 @@ Package Vendor: NXP
 
    * Component: ::CMSIS:RTOS2:2.1.3 (API)
       Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
