--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,15 +22,12 @@ Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 C:\Users\ningjw\Desktop\RT1052\rt1052.uvprojx
-Project File Date:  02/26/2020
+Project File Date:  02/29/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling iic_temp_drv.c...
-linking...
-Program Size: Code=95660 RO-data=8296 RW-data=892 ZI-data=5427584  
-FromELF: creating hex file...
+After Build - User command #1: fromelf --bin ".\Objects\rt1052.axf" --output ".\Objects\rt1052.bin"
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -121,13 +118,13 @@ Package Vendor: NXP
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\semphr.h
-      Source file:   Source\list.c
-      Include file:  Source\include\FreeRTOS.h
-      Include file:  Source\include\task.h
       Source file:   Source\queue.c
-      Source file:   Source\tasks.c
       Include file:  Source\include\queue.h
+      Include file:  Source\include\task.h
+      Include file:  Source\include\FreeRTOS.h
+      Include file:  Source\include\semphr.h
+      Source file:   Source\tasks.c
+      Source file:   Source\list.c
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
@@ -143,23 +140,23 @@ Package Vendor: NXP
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Include file:  Source\include\message_buffer.h
       Source file:   Source\stream_buffer.c
+      Include file:  Source\include\message_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
-      Include file:  Source\include\stream_buffer.h
       Source file:   Source\stream_buffer.c
+      Include file:  Source\include\stream_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Include file:  Source\include\timers.h
       Source file:   Source\timers.c
+      Include file:  Source\include\timers.h
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
       Source file:   drivers\fsl_adc.c
@@ -170,8 +167,8 @@ Package Vendor: NXP
       Source file:   drivers\fsl_adc_etc.c
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Include file:  drivers\fsl_clock.h
       Source file:   drivers\fsl_clock.c
+      Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
       Source file:   drivers\fsl_common.c
@@ -182,12 +179,12 @@ Package Vendor: NXP
       Include file:  drivers\fsl_dcdc.h
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Source file:   drivers\fsl_dmamux.c
       Include file:  drivers\fsl_dmamux.h
+      Source file:   drivers\fsl_dmamux.c
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Include file:  drivers\fsl_edma.h
       Source file:   drivers\fsl_edma.c
+      Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:flexspi:2.1.1
       Source file:   drivers\fsl_flexspi.c
@@ -202,8 +199,8 @@ Package Vendor: NXP
       Source file:   drivers\fsl_gpt.c
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Source file:   drivers\fsl_lpi2c.c
       Include file:  drivers\fsl_lpi2c.h
+      Source file:   drivers\fsl_lpi2c.c
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
@@ -229,8 +226,8 @@ Package Vendor: NXP
       Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Include file:  drivers\fsl_lpuart_edma.h
       Source file:   drivers\fsl_lpuart_edma.c
+      Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
       Source file:   drivers\fsl_pit.c
@@ -241,64 +238,64 @@ Package Vendor: NXP
       Source file:   drivers\fsl_pwm.c
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
+      Source file:   drivers\fsl_qtmr.c
 
    * Component: NXP::Device:SDK Drivers:sdhc:2.2.8
-      Include file:  drivers\fsl_usdhc.h
       Source file:   drivers\fsl_usdhc.c
+      Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
-      Include file:  drivers\fsl_snvs_hp.h
       Source file:   drivers\fsl_snvs_hp.c
+      Include file:  drivers\fsl_snvs_hp.h
 
    * Component: NXP::Device:SDK Drivers:snvs_lp:2.1.0
-      Include file:  drivers\fsl_snvs_lp.h
       Source file:   drivers\fsl_snvs_lp.c
+      Include file:  drivers\fsl_snvs_lp.h
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
-      Include file:  drivers\fsl_src.h
       Source file:   drivers\fsl_src.c
+      Include file:  drivers\fsl_src.h
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Source file:   drivers\fsl_xbara.c
       Include file:  drivers\fsl_xbara.h
+      Source file:   drivers\fsl_xbara.c
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
+      Include file:  utilities\str\fsl_str.h
       Include file:  utilities\debug_console\fsl_debug_console.h
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
-      Source file:   utilities\str\fsl_str.c
-      Include file:  utilities\str\fsl_str.h
       Source file:   utilities\debug_console\fsl_debug_console.c
+      Source file:   utilities\str\fsl_str.c
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
-      Source file:   components\serial_manager\serial_manager.c
-      Include file:  components\serial_manager\serial_port_internal.h
       Include file:  components\serial_manager\serial_manager.h
+      Include file:  components\serial_manager\serial_port_internal.h
+      Source file:   components\serial_manager\serial_manager.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Include file:  components\serial_manager\serial_port_uart.h
       Source file:   components\serial_manager\serial_port_uart.c
+      Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
       Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Include file:  MIMXRT1052.h
-      Source file:   system_MIMXRT1052.c
-      Include file:  fsl_device_registers.h
       Include file:  system_MIMXRT1052.h
-      Source file:   arm\startup_MIMXRT1052.s
       Include file:  MIMXRT1052_features.h
-Build Time Elapsed:  00:00:03
+      Source file:   system_MIMXRT1052.c
+      Source file:   arm\startup_MIMXRT1052.s
+      Include file:  fsl_device_registers.h
+      Include file:  MIMXRT1052.h
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
